--- a/design/styles.css
+++ b/design/styles.css
@@ -41,7 +41,36 @@ body {
   width: 100%;
   border-radius: 10px;
   cursor: pointer;
-  
+}
+
+.eye_img {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 250px;
+  margin: auto;
+  opacity: 0;
+}
+
+.eye_img:hover {
+  cursor: pointer;
+  visibility: visible;
+  opacity: 1;
+}
+
+.hover-back {
+  background-color: hsl(178, 100%, 50%, 0.5);
+  width: 300px;
+  height: 100%;
+  border-radius: 10px;
+  z-index: -1;
+}
+
+.hover-back:hover {
+  position: relative;
+  z-index: 0;
+  background-color: hsl(178, 100%, 50%, 60%);
 }
 
 .card-top h2 {
@@ -53,7 +82,7 @@ body {
 .card-top h2:hover {
   color: hsl(178, 100%, 50%);
   cursor: pointer;
-  
+  transition: 0.3s ease-in;
 }
 
 .card-mid {
